--- a/mysettings.json
+++ b/mysettings.json
@@ -1,99 +1,97 @@
 {
-    "editor.suggestSelection": "first",
-    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-    "files.autoSave": "afterDelay",
-    "editor.formatOnSave": true,
-    "indentRainbow.colors": [
-        "rgba(3,4,94,0.1)",
-        "rgba(2, 62, 128,0.1)",
-        "rgba(0, 119, 182, 0.1)",
-        "rgba(0, 150, 199,0.1)",
-        "rgba(0, 180, 216,0.1)",
-        "rgba(72, 202, 228,0.1)",
-        "rgba(144, 224, 239,0.1)",
-        "rgba(173, 232, 244,0.1)",
-        "rgba(202, 240, 248,0.1)"
-    ],
-    "emmet.includeLanguages": {
-        "javascript": "javascriptreact",
-        "vue-html": "html"
-    },
-    "emmet.showExpandedAbbreviation": "inMarkupAndStylesheetFilesOnly",
-    "javascript.updateImportsOnFileMove.enabled": "always",
-    "debug.console.fontSize": 14,
-    "explorer.confirmDragAndDrop": false,
-    "files.autoSaveDelay": 1000,
-    "editor.renderLineHighlight": "none",
-    "files.exclude": {
-        "**/.history": true,
-        "**/.next": true
-    },
-    "terminal.integrated.lineHeight": 1.3,
-    "eslint.alwaysShowStatus": true,
-    "emmet.triggerExpansionOnTab": true,
-    "workbench.startupEditor": "newUntitledFile",
-    "powermode.enabled": true,
-    "powermode.enableShake": false,
-    "powermode.enableStatusBarComboTimer": false,
-    "powermode.enableStatusBarComboCounter": false,
-    "powermode.explosionOffset": 0.2,
-    "powermode.explosionSize": 3.5,
-    "workbench.editor.untitled.hint": "hidden",
-    "terminal.integrated.fontSize": 14,
-    "security.workspace.trust.untrustedFiles": "open",
-    "editor.cursorBlinking": "expand",
-    "editor.wordWrap": "on",
-    "files.trimTrailingWhitespace": true,
-    "editor.cursorWidth": 2,
-    "explorer.confirmDelete": false,
-    "editor.fontFamily": "Fira Code, DM Mono, SF Mono, Consolas, Arima Madurai, sans-serif",
-    "vscode_custom_css.imports": [
-        "file:///C:/Users/ngvuq/.vscode/extensions/ngvuq-contrast-theme-1.0.0/vscode.css"
-    ],
-    "editor.fontLigatures": true,
-    "editor.lineHeight": 22,
-    "window.zoomLevel": 0.5,
-    "editor.fontSize": 14,
-    "editor.letterSpacing": 0.5,
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "prettier.tabWidth": 4,
-    "editor.bracketPairColorization.enabled": true,
-    "editor.suggest.preview": true,
-    "javascript.inlayHints.parameterNames.enabled": "all",
-    "typescript.inlayHints.parameterNames.enabled": "all",
-    "[html]": {
-        "editor.matchBrackets": "never",
-        "editor.defaultFormatter": "HookyQR.beautify",
-        "editor.tabSize": 4
-    },
-    "[css]": {
-        "editor.matchBrackets": "never",
-        "editor.tabSize": 4
-    },
-    "editor.tabSize": 2,
-    "editor.guides.bracketPairs": true,
-    "sync.gist": "cacbf59a81dbc116df0ab726b8f70983",
-    "workbench.iconTheme": "helium-icon-theme",
-    "workbench.colorTheme": "ngvuq - Normal Contrast",
-    "editor.formatOnPaste": true,
-    "helium-icon-theme.folders.color": "#90a4ad",
-    "sync.autoUpload": true,
-    "turboConsoleLog.logMessagePrefix": "",
-    "terminal.integrated.cursorBlinking": true,
-    "terminal.integrated.cursorStyle": "line",
-    "terminal.integrated.letterSpacing": 0.5,
-    "liveServer.settings.donotShowInfoMsg": true,
-    "liveServer.settings.useLocalIp": true,
-    "editor.minimap.enabled": false,
-    "turboConsoleLog.includeFileNameAndLineNum": false,
-    "turboConsoleLog.insertEnclosingFunction": false,
-    "turboConsoleLog.delimiterInsideMessage": "",
-    "php.suggest.basic": false,
-    "php.validate.enable": true,
-    "php.validate.executablePath": "/opt/lampp/bin/php",
-    "php.validate.run": "onSave",
-    "php.executablePath": "/opt/lampp/bin/php",
-    "code-runner.executorMap": {
-        "php": "/opt/lampp/bin/php"
-    }
+  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact",
+    "vue-html": "html"
+  },
+  "emmet.triggerExpansionOnTab": true,
+  "emmet.showExpandedAbbreviation": "inMarkupAndStylesheetFilesOnly",
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "explorer.confirmDragAndDrop": false,
+  "files.autoSaveDelay": 1000,
+  "files.exclude": {
+    "**/.history": true,
+    "**/.next": true
+  },
+  "eslint.alwaysShowStatus": true,
+
+  "powermode.enabled": true,
+  "powermode.enableStatusBarComboTimer": false,
+  "powermode.combo.location": "statusbar",
+  "powermode.combo.counterEnabled": "hide",
+  "powermode.combo.timerEnabled": "hide",
+  "powermode.shake.enabled": false,
+  "powermode.explosions.size": 3.5,
+  "powermode.explosions.offset": 0.2,
+  "workbench.colorTheme": "ngvuq - W Plus ",
+  "workbench.startupEditor": "newUntitledFile",
+  "workbench.editor.untitled.hint": "hidden",
+
+  "terminal.integrated.lineHeight": 1.3,
+  "terminal.integrated.fontSize": 14,
+  "terminal.integrated.cursorBlinking": true,
+  "terminal.integrated.cursorStyle": "line",
+  "terminal.integrated.letterSpacing": 1,
+  "terminal.integrated.fontFamily": "SF Mono",
+
+  "security.workspace.trust.untrustedFiles": "open",
+  "files.trimTrailingWhitespace": true,
+  "vscode_custom_css.imports": [
+    "file:///C:/Users/QUOC/.vscode/extensions/ngvuq.w-contrast-0.2.2/vscode.css"
+  ],
+
+  "editor.renderLineHighlight": "none",
+  "editor.suggestSelection": "first",
+  "editor.formatOnSave": true,
+  "editor.fontFamily": "SF Mono, Fira Code, sans-serif",
+  "editor.cursorWidth": 2,
+  "editor.cursorBlinking": "expand",
+  "editor.wordWrap": "on",
+  "editor.fontLigatures": true,
+  "editor.lineHeight": 22,
+  "editor.inlineSuggest.enabled": true,
+  "editor.letterSpacing": 1,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.tabSize": 2,
+  "editor.guides.bracketPairs": true,
+  "editor.bracketPairColorization.enabled": true,
+  "editor.formatOnPaste": true,
+  "editor.suggest.preview": true,
+  "editor.minimap.enabled": false,
+
+  "javascript.inlayHints.parameterNames.enabled": "all",
+  "typescript.inlayHints.parameterNames.enabled": "all",
+  "workbench.iconTheme": "helium-icon-theme",
+  "helium-icon-theme.folders.color": "#90a4ad",
+
+  "indentRainbow.colors": [
+    "rgba(3, 4, 94,0.15)",
+    "rgba(2, 62, 138,0.15)",
+    "rgba(0, 119, 182, 0.15)",
+    "rgba(0, 150, 199,0.15)",
+    "rgba(0, 180, 216,0.15)",
+    "rgba(72, 202, 228,0.15)",
+    "rgba(144, 224, 239,0.15)"
+  ],
+  "tabnine.experimentalAutoImports": true,
+  "diffEditor.wordWrap": "on",
+
+  "prettier.arrowParens": "always",
+  "prettier.bracketSameLine": false,
+  "prettier.bracketSpacing": true,
+  "prettier.embeddedLanguageFormatting": "auto",
+  "prettier.htmlWhitespaceSensitivity": "css",
+  "prettier.insertPragma": false,
+  "prettier.jsxSingleQuote": true,
+  "prettier.printWidth": 80,
+  "prettier.proseWrap": "preserve",
+  "prettier.quoteProps": "as-needed",
+  "prettier.requirePragma": false,
+  "prettier.semi": true,
+  "prettier.singleQuote": true,
+  "prettier.tabWidth": 2,
+  "prettier.trailingComma": "es5",
+  "prettier.useTabs": false,
+  "prettier.vueIndentScriptAndStyle": false,
+  "terminal.integrated.enableMultiLinePasteWarning": false
 }
