--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "w-theme",
-  "displayName": "W Theme",
-  "description": "W theme for visual studio code",
-  "version": "1.0.4",
+  "name": "w-themes",
+  "displayName": "W Themes",
+  "description": "W themes for visual studio code",
+  "version": "2.0.1",
   "publisher": "ngvuq",
   "engines": {
     "vscode": "^1.75.1"
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ngvuq11/W-Contrast"
+    "url": "https://github.com/ngvuq11/W-Themes"
   },
   "icon": "icon.png",
   "keywords": [
